# derive_enum_methods

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
