[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["rust-patterns"]
description = "Automatically derives `is_dog` and `is_cat` methods for `enum Pet { Dog, Cat }`."
documentation = "https://docs.rs/derive_is_enum_variant"
keywords = ["derive", "is", "enum", "variant"]
license = "Apache-2.0/MIT"
name = "derive_enum_methods"
readme = "./README.md"
repository = "https://github.com/fitzgen/derive_is_enum_variant"
version = "0.1.1"


[dependencies]
heck = "0.3.0"
quote = "1.0.9"
syn = { version = "1.0.72", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.7.2"

[lib]
path = "./src/lib.rs"
proc_macro = true
